Update index and Script

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
             </p>
 
             <div class="social-icons">
-                <a href="#">
+                <a href="https://github.com/diogoBenevenuto" target="_blank">
                     <i class="bx bxl-github"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.linkedin.com/in/diogo-benevenuto-da-silva-monteiro-b504451ab/" target="_blank">
                     <i class="bx bxl-linkedin-square"></i>
                 </a>
                 
             </div>
 
             <div class="btn-group">
-                 <a href="#" class="btn">Hire</a>
+                 <a href="https://wa.me/5524998630470" target="_blank" class="btn">Hire</a>
                  <a href="#contact" class="btn">Contact</a>
             </div>
         </div>
@@ -124,20 +124,20 @@
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
 
-        <form action="">
+        <form id="contactForm">
             <div class="input-group">
                 <div class="input-box">
-                    <input type="text" placeholder="Full Name">
-                    <input type="email" placeholder="Email">
+                    <input type="text" id="fullname" placeholder="Full Name" required>
+                    <input type="email" id="email" placeholder="Email" required>
                 </div>
                 <div class="input-box">
-                    <input type="number" placeholder="Phone Number">
-                    <input type="text" placeholder="Subject">
+                    <input type="number" id="number" placeholder="Phone Number" required>
+                    <input type="text" id="subject" placeholder="Subject" required>
                 </div>
             </div>
 
             <div class="input-group-2">
-                <textarea name="" id="" cols="" rows="10" placeholder="Your Message"></textarea>
+                <textarea name="" id="message" cols="" rows="10" placeholder="Your Message" required></textarea>
                 <input type="submit" value="Send Message" class="btn">
             </div>
 
@@ -147,10 +147,10 @@
 
     <footer class="footer">
         <div class="social-icons">
-            <a href="#">
+            <a href="https://github.com/diogoBenevenuto" target="_blank">
                 <i class="bx bxl-github"></i>
             </a>
-            <a href="#">
+            <a href="https://www.linkedin.com/in/diogo-benevenuto-da-silva-monteiro-b504451ab/" target="_blank">
                 <i class="bx bxl-linkedin-square"></i>
             </a>
             
