--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
 
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
-
+        
         <form id="contactForm">
             <div class="input-group">
                 <div class="input-box">
-                    <input type="text" id="fullname" placeholder="Full Name" required>
+                    <input type="text" id="fullname" placeholder="Full Name" required> 
                     <input type="email" id="email" placeholder="Email" required>
                 </div>
                 <div class="input-box">
@@ -174,6 +174,10 @@
         <p class="copyright">© Diogo Benevenuto da Silva Monteiro | All Rights Reserved</p>
 
     </footer>
+
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="script.js"></script>
+   
 </body>
 </html>
