--- a/index.html
+++ b/index.html
@@ -64,11 +64,9 @@
 
         <div class="about-content">
             <h2>About <span>Me</span></h2>
-            <p>Lorem ipsum dolor sit amet consectetur 
-            adipisicing elit. Illum nesciunt ipsum, delectus 
-            vitae excepturi quo explicabo ex impedit quod enim 
-            sequi facilis aliquid recusandae ullam. Illum recusandae 
-            earum facere ut.
+            <p>I am a game and backend developer with experience in Unreal Engine, Unity, Smile Game Builder, and Blender. 
+            I work with C#, JavaScript, and SQL Server. Passionate about creating efficient games and backend solutions. 
+            Always striving to learn and improve my skills.
             </p>
             <a href="#" class="btn">Read More</a>
         </div>
@@ -83,11 +81,8 @@
                 <div class="service-info">
                     <i class="bx bx-game"></i>
                     <h4>Game Developement</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Recusandae minus eius aspernatur 
-                    officia modi unde blanditiis dolor? Adipisci suscipit 
-                    velit porro iste voluptas vel error dolor, veniam facere, 
-                    consequatur sunt?
+                    <p>Check out my game projects! Click here to explore 
+                    the games I've developed and see my work as a Game Developer.
                     </p>
                 </div>
             </div>
@@ -95,20 +90,19 @@
             <div class="service-box">
                 <div class="service-info">
                     <i class="bx bx-code"></i>
-                    <h4>Frontend Development</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Recusandae minus eius aspernatur 
-                    officia modi unde blanditiis dolor? Adipisci suscipit 
-                    velit porro iste voluptas vel error dolor, veniam facere, 
-                    consequatur sunt?
+                    <h4>Backend and Frontend Development</h4>
+                    <p>Check out my Backend and Frontend projects! 
+                    Click here to explore robust backend solutions that support 
+                    applications and services, and interactive frontend interfaces 
+                    that enhance user experience.
                     </p>
                 </div>
             </div>
-
+             
             <div class="service-box">
                 <div class="service-info">
                     <i class="bx bx-code-curly"></i>
-                    <h4>Backend Development</h4>
+                    <h4>Designer</h4>
                     <p>Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Recusandae minus eius aspernatur 
                     officia modi unde blanditiis dolor? Adipisci suscipit 
