--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio Diogo Benevenuto da Silva Monteiro</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -27,13 +27,8 @@
 
         <div class="home-content">
             <h1>Hi, It's <span>Diogo</span></h1>
-            <h3>I'm a <span>Game Developer</span></h3>
+            <h3>I'm a <span>Game Developer</span> and <span> Developer</span></h3>
             <p>
-                Lorem ipsum dolor sit amet, consectetur 
-                adipisicing elit. Vero deleniti sit magnam? 
-                Tempore, maiores. Assumenda nemo quia eos corrupti 
-                nam quis harum distinctio laboriosam quos beatae, 
-                excepturi ipsam! Consequatur, architecto!
             </p>
 
             <div class="social-icons">
@@ -59,14 +54,28 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="imagem/diogo.jpeg" alt="">
+            <img src="imagem/diogo1.jpeg" alt="">
         </div>
 
         <div class="about-content">
             <h2>About <span>Me</span></h2>
-            <p>I am a game and backend developer with experience in Unreal Engine, Unity, Smile Game Builder, and Blender. 
-            I work with C#, JavaScript, and SQL Server. Passionate about creating efficient games and backend solutions. 
-            Always striving to learn and improve my skills.
+            <p>Hello, I'm Diogo, a developer passionate about technology and design. 
+                With experience in web development, game creation, and digital design, 
+                I have extensive knowledge in technologies such as JavaScript, Python, 
+                C#, HTML, CSS, Node.js, and game development tools like Unreal Engine, 
+                Unity, Smile Game Builder, Bakin RPG Developer, and Construct.<br><br>
+
+                I’m always seeking new challenges to enhance my skills and create innovative projects. 
+                I work on indie game projects and backend solutions, and I continually stay updated with 
+                the latest industry trends and best practices.<br><br>
+                
+                Outside of work, I’m a gaming enthusiast who enjoys watching videos and streams 
+                for inspiration on new projects. I love watching series, practicing boxing to 
+                relax and stay active, and exploring outdoor activities like hiking, walking, 
+                and playing basketball. I’m also a fan of reading, which helps fuel my creativity.<br><br>
+                
+                If you're looking for someone with a unique blend of technical and creative skills, 
+                I’m here to help. Let’s turn your ideas into reality!
             </p>
             <a href="#" class="btn">Read More</a>
         </div>
@@ -84,6 +93,8 @@
                     <p>Check out my game projects! Click here to explore 
                     the games I've developed and see my work as a Game Developer.
                     </p>
+                    <br>
+                    <a href="paginas/game-projects.html" class="btn">Explore Projects</a>
                 </div>
             </div>
 
@@ -103,11 +114,7 @@
                 <div class="service-info">
                     <i class="bx bx-code-curly"></i>
                     <h4>Designer</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur 
-                    adipisicing elit. Recusandae minus eius aspernatur 
-                    officia modi unde blanditiis dolor? Adipisci suscipit 
-                    velit porro iste voluptas vel error dolor, veniam facere, 
-                    consequatur sunt?
+                    <p>Click here to explore the designs I've created and see my work as a Designer.
                     </p>
                 </div>
             </div>
