--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <div class="btn-group">
-                 <a href="https://wa.me/5524998630470" target="_blank" class="btn">Hire</a>
+                 <a href="https://wa.me/5524998630470" target="_blank" class="btn">WhatsApp</a>
                  <a href="#contact" class="btn">Contact</a>
             </div>
         </div>
@@ -62,7 +62,7 @@
             <p>Hello, I'm Diogo, a developer passionate about technology and design. 
                 With experience in web development, game creation, and digital design, 
                 I have extensive knowledge in technologies such as JavaScript, Python, 
-                C#, HTML, CSS, Node.js, and game development tools like Unreal Engine, 
+                C#, C++, HTML, CSS, Node.js, and game development tools like Unreal Engine, 
                 Unity, Smile Game Builder, Bakin RPG Developer, and Construct.<br><br>
 
                 I’m always seeking new challenges to enhance my skills and create innovative projects. 
