Atualização do portifolio, adição do projeto Guess the word, troca das imagens e adição do icon

--- a/paginas/crystal-legends.html
+++ b/paginas/crystal-legends.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crystal Legends - Diogo Benevenuto da Silva Monteiro</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../imagem/My-Icon-01.png" type="image/png">
 </head>
 <body>
 
