--- a/paginas/game-projects.html
+++ b/paginas/game-projects.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Projects - Diogo Benevenuto da Silva Monteiro</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../imagem/My-Icon-01.png" type="image/png">
 </head>
 <body>
 
@@ -34,14 +35,33 @@
                 turn-based combat and a nostalgic experience that brings the feel of classic games.</p>
                 <a href="../paginas/crystal-legends.html" class="btn">View Project</a>
             </div>
+
             <div class="project">
                 <img src="../imagem/projects/games/Z-0.jpeg" alt="Project 2">
                 <h3><span>Zombie Matt</span></h3>
                 <p>In a post-apocalyptic world, you must defeat 
-                    zombies by solving math problems. Explore scenarios and use 
-                    mathematics to eliminate these creatures..</p>
+                zombies by solving math problems. Explore scenarios and use 
+                mathematics to eliminate these creatures.</p>
                 <a href="../paginas/zombie-matt.html" class="btn">View Project</a>
             </div>
+
+            <div class="project">
+            <img src ="../imagem/projects/games/Ss-Back.png" alt="Project 3">
+            <h3><span>Space Shooter</span></h3>
+            <p>Space Shooter is a classic spaceship game where 
+                you destroy enemies and test your reflexes as the waves 
+                become more challenging.</p>
+            <a href="../paginas/SpaceShooter.html" class="btn">View Project</a>
+            </div>
+
+            <div class="project">
+                <img src ="../imagem/projects/games/guess-00.png" alt="Project 4">
+                <h3><span>Guess the Word</span></h3>
+                <p>Guess the Word" is a fun game where you guess words letter by letter based on a clue. 
+                    Correct guesses earn points, but three mistakes end the game. 
+                    Built with React, it's a great challenge for your skills!</p>
+                <a href="../paginas/Adivinhe-Palavra.html" class="btn">View Project</a>
+                </div>
             
         </div>
     </section>
