--- a/paginas/zombie-matt.html
+++ b/paginas/zombie-matt.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zombie Matt - Diogo Benevenuto da Silva Monteiro</title>
     <link rel="stylesheet" href="../style.css">
+    <link rel="icon" href="../imagem/My-Icon-01.png" type="image/png">
 </head>
 <body>
 
@@ -33,12 +34,12 @@
         </p>
 
         <div class="project-images">
-            <img src="../imagem/projects/games/Z-1.jpeg" alt="Crystal Legends Screenshot 1">
-            <img src="../imagem/projects/games/Z-2.jpeg" alt="Crystal Legends Screenshot 2">
-            <img src="../imagem/projects/games/Z-3.jpeg" alt="Crystal Legends Screenshot 3">
-            <img src="../imagem/projects/games/Z-4.jpeg" alt="Crystal Legends Screenshot 4">
-            <img src="../imagem/projects/games/Z-5.jpeg" alt="Crystal Legends Screenshot 5">
-            <img src="../imagem/projects/games/Z-6.jpeg" alt="Crystal Legends Screenshot 6">
+            <img src="../imagem/projects/games/Z-1.jpeg" >
+            <img src="../imagem/projects/games/Z-2.jpeg" >
+            <img src="../imagem/projects/games/Z-3.jpeg" >
+            <img src="../imagem/projects/games/Z-4.jpeg" >
+            <img src="../imagem/projects/games/Z-5.jpeg" >
+            <img src="../imagem/projects/games/Z-6.jpeg" >
         </div>
 
         <div class="project-info">
