--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Portifolio Diogo Benevenuto da Silva Monteiro</title>
     <link rel="stylesheet" href="../style.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
+
+    <link rel="icon" href="imagem/My-Icon-01.png" type="image/png">
 </head>
 <body>
 
@@ -20,6 +22,7 @@
             <a href="#about">About</a>
             <a href="#services">Services</a>
             <a href="#contact">Contact</a>
+            <a href="resume/Currículo D.pdf" download="Resume Diogo">Resume</a>
          </nav>
     </header>
 
@@ -48,7 +51,7 @@
         </div>
             
         <div class="home-img">
-            <img src="imagem/diogo.jpeg" alt="">
+            <img src="imagem/My-Icon.png" alt="">
         </div>
     </section>
 
@@ -116,6 +119,8 @@
                     <h4>Designer</h4>
                     <p>Click here to explore the designs I've created and see my work as a Designer.
                     </p>
+                    <br>
+                    <a href="paginas/design-projects.html" class="btn">Explore Projects</a>
                 </div>
             </div>
 
