Adição do projeto Sunny Land, e ajuste nos links para serem abertos em um nova guia.

--- a/paginas/Adivinhe-Palavra.html
+++ b/paginas/Adivinhe-Palavra.html
@@ -48,7 +48,7 @@
             <ul>
                 <li><strong>Type of Project:</strong> Study project</li>
                 <li><strong>Tech:</strong> React</li>
-                <li><strong>Platform:</strong> PC and Mobile</li>
+                <li><strong>Platform:</strong> PC</li>
                 <li><strong>Role:</strong> Programmer and Designer</li>
             </ul>
             <p>Guess the Word is a fun game where you guess a secret word, letter by letter, based on a clue. 
@@ -61,7 +61,7 @@
         </div>
         
 
-        <a href="https://diogobenevenuto.github.io/guess_the_word_react_vite/" class="btn">Access Project</a>
+        <a href="https://diogobenevenuto.github.io/guess_the_word_react_vite/" target="_blank" class="btn">Access Project</a>
     </section>
 
     <footer class="footer">
