--- a/paginas/crystal-legends.html
+++ b/paginas/crystal-legends.html
@@ -64,7 +64,7 @@
         <br>
         <br>
 
-        <a href="https://diogo-benevenuto.itch.io/crystal-legends" class="btn">Access Project</a>
+        <a href="https://diogo-benevenuto.itch.io/crystal-legends" target="_blank" class="btn">Access Project</a>
     </section>
 
     <footer class="footer">
