--- a/paginas/design-projects.html
+++ b/paginas/design-projects.html
@@ -33,7 +33,7 @@
                 <h3><span>Artstation</span></h3>
                 <p>Explore my 3D modeling portfolio! Here you'll find my creations, 
                 focusing on details and innovation. Follow my projects and progress in the world of 3D modeling.</p>
-                <a href="https://diogobenevenuto.artstation.com/" class="btn">View Portfolio</a>
+                <a href="https://diogobenevenuto.artstation.com/" target="_blank" class="btn">View Portfolio</a>
             </div>
 
             <div >
