--- a/paginas/SpaceShooter.html
+++ b/paginas/SpaceShooter.html
@@ -66,7 +66,7 @@
         <br>
         <br>
 
-        <a href="../SpaceShooter/index.html" class="btn">Access Project</a>
+        <a href="../SpaceShooter/index.html" target="_blank" class="btn">Access Project</a>
     </section>
 
     <footer class="footer">
