--- a/paginas/zombie-matt.html
+++ b/paginas/zombie-matt.html
@@ -62,7 +62,7 @@
         <br>
         <br>
 
-        <a href="https://zombiematt.netlify.app/" class="btn">Access Project</a>
+        <a href="https://zombiematt.netlify.app/" target="_blank" class="btn">Access Project</a>
     </section>
 
     <footer class="footer">
