Atualização do portfolio, criei novas pagina para organização e separei os projetos de jogos por estudo, pessoal e gamejam

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="imagem/diogo1.jpeg" alt="">
+            <img src="imagem/Diogo.png" alt="">
         </div>
 
         <div class="about-content">
@@ -93,8 +93,7 @@
                 <div class="service-info">
                     <i class="bx bx-game"></i>
                     <h4>Game Developement</h4>
-                    <p>Check out my game projects! Click here to explore 
-                    the games I've developed and see my work as a Game Developer.
+                    <p>Check out my game projects! Click here to explore my work as a Game Developer.
                     </p>
                     <br>
                     <a href="paginas/game-projects.html" class="btn">Explore Projects</a>
@@ -104,23 +103,32 @@
             <div class="service-box">
                 <div class="service-info">
                     <i class="bx bx-code"></i>
-                    <h4>Backend and Frontend Development</h4>
-                    <p>Check out my Backend and Frontend projects! 
-                    Click here to explore robust backend solutions that support 
-                    applications and services, and interactive frontend interfaces 
-                    that enhance user experience.
+                    <h4>Backend / Frontend Development</h4>
+                    <p>Check out my Backend and Frontend projects!
+                        Click here to explore my projects
                     </p>
                 </div>
             </div>
              
             <div class="service-box">
                 <div class="service-info">
-                    <i class="bx bx-code-curly"></i>
+                    <i class="bx bx-palette"></i>
                     <h4>Designer</h4>
                     <p>Click here to explore the designs I've created and see my work as a Designer.
                     </p>
                     <br>
                     <a href="paginas/design-projects.html" class="btn">Explore Projects</a>
+                </div>
+            </div>
+
+            <div class="service-box">
+                <div class="service-info">
+                    <i class="bx bx-bar-chart"></i>
+                    <h4>Power BI</h4>
+                    <p>Click here to explore my BI projects.
+                    </p>
+                    <br>
+                    
                 </div>
             </div>
 
