Adição da opção de voltar nas paginas uma a uma, utilizando history.back

--- a/paginas/game-projects.html
+++ b/paginas/game-projects.html
@@ -68,6 +68,10 @@
 
     </section>
 
+    <div style="text-align: center; margin: 40px 0;">
+        <button onclick="history.back()" class="btn">← Voltar</button>
+      </div>
+
     <footer class="footer">
         <p class="copyright">© Diogo Benevenuto da Silva Monteiro | All Rights Reserved</p>
     </footer>
