--- a/paginas/Adivinhe-Palavra.html
+++ b/paginas/Adivinhe-Palavra.html
@@ -64,6 +64,10 @@
         <a href="https://diogobenevenuto.github.io/guess_the_word_react_vite/" target="_blank" class="btn">Access Project</a>
     </section>
 
+    <div style="text-align: center; margin: 40px 0;">
+        <button onclick="history.back()" class="btn">← Voltar</button>
+      </div>
+
     <footer class="footer">
         <p class="copyright">© Diogo Benevenuto da Silva Monteiro | All Rights Reserved</p>
     </footer>
