--- a/paginas/SpaceShooter.html
+++ b/paginas/SpaceShooter.html
@@ -69,6 +69,10 @@
         <a href="../SpaceShooter/index.html" target="_blank" class="btn">Access Project</a>
     </section>
 
+    <div style="text-align: center; margin: 40px 0;">
+        <button onclick="history.back()" class="btn">← Voltar</button>
+      </div>
+
     <footer class="footer">
         <p class="copyright">© Diogo Benevenuto da Silva Monteiro | All Rights Reserved</p>
     </footer>
