--- a/paginas/Sunny-Land.html
+++ b/paginas/Sunny-Land.html
@@ -64,6 +64,10 @@
         <a href="../Executavel Sunny Land/Executavel Sunny Land.rar" class="btn">Access Project</a>
     </section>
 
+    <div style="text-align: center; margin: 40px 0;">
+        <button onclick="history.back()" class="btn">← Voltar</button>
+      </div>
+
     <footer class="footer">
         <p class="copyright">© Diogo Benevenuto da Silva Monteiro | All Rights Reserved</p>
     </footer>
