--- a/paginas/crystal-legends.html
+++ b/paginas/crystal-legends.html
@@ -67,6 +67,10 @@
         <a href="https://diogo-benevenuto.itch.io/crystal-legends" target="_blank" class="btn">Access Project</a>
     </section>
 
+    <div style="text-align: center; margin: 40px 0;">
+        <button onclick="history.back()" class="btn">← Voltar</button>
+      </div>
+
     <footer class="footer">
         <p class="copyright">© Diogo Benevenuto da Silva Monteiro | All Rights Reserved</p>
     </footer>
