--- a/paginas/design-projects.html
+++ b/paginas/design-projects.html
@@ -48,6 +48,10 @@
         </div>
     </section>
 
+    <div style="text-align: center; margin: 40px 0;">
+        <button onclick="history.back()" class="btn">← Voltar</button>
+      </div>
+
     <footer class="footer">
         <p class="copyright">© Diogo Benevenuto da Silva Monteiro | All Rights Reserved</p>
     </footer>
