--- a/paginas/zombie-matt.html
+++ b/paginas/zombie-matt.html
@@ -65,6 +65,10 @@
         <a href="https://zombiematt.netlify.app/" target="_blank" class="btn">Access Project</a>
     </section>
 
+    <div style="text-align: center; margin: 40px 0;">
+        <button onclick="history.back()" class="btn">← Voltar</button>
+      </div>
+
     <footer class="footer">
         <p class="copyright">© Diogo Benevenuto da Silva Monteiro | All Rights Reserved</p>
     </footer>
